--- a/assets/less/ie.less
+++ b/assets/less/ie.less
@@ -16,6 +16,17 @@ html.ie.oldie > body {
 
 	// Place your fixes here
 
+	// The align-middle mixin hacks...
+	#disabled,
+	.control.mpg .value,
+	.control-inner{
+
+		margin: 20px auto 0!important;
+		position: static!important;
+
+	}
+
+
 	#logo a { background-image: url( ../img/mini-logo-small.png ); }
 
 	.layout-wrapper .layout #dash {
