--- a/assets/less/mixins.less
+++ b/assets/less/mixins.less
@@ -53,11 +53,6 @@
 	top: 50%;
 	left: 50%;
 
-	// IE!
-
-	margin: 20px auto 0\9;
-	position: static\9;
-
 }
 
 .align-centers {
